--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_Time.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_Time.cshtml
@@ -1,35 +1,35 @@
 ﻿@using FamilyHubs.ServiceDirectory.Admin.Web.Pages.manage_services
-@model FamilyHubs.ServiceDirectory.Admin.Web.Pages.manage_services.TimeComponent
+@model FamilyHubs.ServiceDirectory.Admin.Web.Pages.manage_services.TimeModel
 <div class="govuk-form-group">
-    <fieldset class="govuk-fieldset" role="group" aria-describedby="@Model.HintId">
+    <fieldset class="govuk-fieldset" role="group" aria-describedby="@Model.Component.HintId">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-            @Model.Description
+            @Model.Component.Description
         </legend>
         <div class="govuk-date-input">
             <div class="govuk-date-input__item">
                 <div class="govuk-form-group">
-                    <label class="govuk-label govuk-date-input__label" for="@(Model.Name)Hour">
+                    <label class="govuk-label govuk-date-input__label" for="@(Model.Component.Name)Hour">
                         Hour
                     </label>
-                    <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="@(Model.Name)Hour" name="@(Model.Name)Hour" type="text" inputmode="numeric">
+                    <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="@(Model.Component.Name)Hour" name="@(Model.Component.Name)Hour" type="text" inputmode="numeric">
                 </div>
             </div>
             <div class="govuk-date-input__item">
                 <div class="govuk-form-group">
-                    <label class="govuk-label govuk-date-input__label" for="@(Model.Name)Minute">
+                    <label class="govuk-label govuk-date-input__label" for="@(Model.Component.Name)Minute">
                         Minute
                     </label>
-                    <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="@(Model.Name)Minute" name="@(Model.Name)Minute" type="text" inputmode="numeric">
+                    <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="@(Model.Component.Name)Minute" name="@(Model.Component.Name)Minute" type="text" inputmode="numeric">
                 </div>
             </div>
             <div class="govuk-date-input__item">
                 <div class="govuk-form-group">
-                    <label class="govuk-label govuk-date-input__label govuk-visually-hidden" for="@(Model.Name)Ampm">
+                    <label class="govuk-label govuk-date-input__label govuk-visually-hidden" for="@(Model.Component.Name)Ampm">
                         Am or pm
                     </label>
-                    <select class="govuk-select govuk-date-input__input app-ampm" id="@(Model.Name)Ampm" name="@(Model.Name)Ampm">
-                        <!option value="am" @(Model.DefaultAmPm == AmPm.Am ? "selected" : "")>am</!option>
-                        <!option value="pm"@(Model.DefaultAmPm == AmPm.Pm ? "selected" : "")>pm</!option>
+                    <select class="govuk-select govuk-date-input__input app-ampm" id="@(Model.Component.Name)Ampm" name="@(Model.Component.Name)Ampm">
+                        <!option value="am" @(Model.Component.DefaultAmPm == AmPm.Am ? "selected" : "")>am</!option>
+                        <!option value="pm"@(Model.Component.DefaultAmPm == AmPm.Pm ? "selected" : "")>pm</!option>
                     </select>
 
                 </div>
