--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_Time.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_Time.cshtml
@@ -1,5 +1,5 @@
-﻿@using FamilyHubs.ServiceDirectory.Admin.Web.Pages.manage_services
-@model FamilyHubs.ServiceDirectory.Admin.Web.Pages.manage_services.TimeModel
+﻿@using FamilyHubs.ServiceDirectory.Admin.Core.Models
+@model TimeModel
 <div class="govuk-form-group">
     <fieldset class="govuk-fieldset" role="group" aria-describedby="@Model.Component.HintId">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
