--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/_ViewImports.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@namespace FamilyHubs.ServiceDirectory.Admin.Web.Pages
+@using FamilyHubs.ServiceDirectory.Admin.Core.Models
+@using System.Runtime.CompilerServices
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, FamilyHubs.SharedKernel.Razor
