--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/times.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/times.cshtml
@@ -2,6 +2,17 @@
 @model FamilyHubs.ServiceDirectory.Admin.Web.Pages.manage_services.timesModel
 @{
     ViewData["Title"] = "When is the service available?";
+
+    Model.Errors.ErrorIdToHtmlElementId = errorId => errorId switch
+    {
+        (int)ErrorId.Times__EnterWeekdaysTimes => "todo: first empty?",
+        (int)ErrorId.Times__EnterWeekendsTimes => "todo: first empty?",
+        (int)ErrorId.Times__EnterValidWeekdaysStartTime => Model.WeekdaysStarts.HourElementId,
+        (int)ErrorId.Times__EnterValidWeekdaysFinishTime => Model.WeekdaysFinishes.HourElementId,
+        (int)ErrorId.Times__EnterValidWeekendsStartTime => Model.WeekendsStarts.HourElementId,
+        (int)ErrorId.Times__EnterValidWeekendsFinishTime => Model.WeekendsFinishes.HourElementId,
+        _ => throw new SwitchExpressionException(errorId)
+    };
 }
 
 @section Back {
