--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/MyAccount/Pages/ChangeName.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/MyAccount/Pages/ChangeName.cshtml
@@ -2,14 +2,16 @@
 @model ChangeNameModel
 @{
     ViewData["Title"] = "Change your name";
-    var error = Model.ErrorState.GetErrorIfTriggered((int)ChangeNameModel.ErrorId.EnterAName);
+    var error = Model.Errors.GetErrorIfTriggered((int)ChangeNameModel.ErrorId.EnterAName);
+
+    Model.Errors.ErrorIdToHtmlElementId = errorId => "new-name";
 }
 
 @section Back {
     <a asp-page="/ViewPersonalDetails" class="govuk-back-link">Back</a>
 }
 
-<partial name="_ErrorSummary" for="@Model.ErrorState" />
+<partial name="_ErrorSummaryNext" for="@Model.Errors" />
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
@@ -21,7 +23,7 @@
                     </h1>
                 </legend>
                 <div class="govuk-form-group @(error?.FormGroupClass)">
-                    <partial name="_ErrorMessage" model="@error" />
+                    <partial name="_ErrorMessageNext" model="@error" />
 
                     <label for="new-name" class="govuk-label">Name</label>
                     @*todo: name is silently truncated if longer than 255 chars. is that the requirement, or should we show an error message? *@
