update fh components + show all errors on language page

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/What-Language.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/What-Language.cshtml
@@ -4,7 +4,7 @@
 @{
     ViewData["Title"] = "Which language is the service offered in?";
 
-    Model.Errors.ErrorIdToHtmlElementId = errorId => $"language-{Model.ErrorIdToSelectIndex?[errorId] ?? 0}";
+    Model.Errors.ErrorIdToHtmlElementId = errorId => $"language-{Model.ErrorIdToFirstSelectIndex?[errorId] ?? 0}";
 }
 
 @section Back {
