--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/What-Language.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/What-Language.cshtml
@@ -35,7 +35,7 @@
 
                             @* the way add-another works, we need data-name for data-id to work *@
                             @* todo: use SelectClass once update packages *@
-                            <select name="language" class="govuk-select @error.SelectClass"
+                            <select name="language" class="govuk-select @error?.SelectClass"
                                     id="language-@index" data-name="language" data-id="language-%index%">
                                 @foreach (var option in What_LanguageModel.LanguageOptions)
                                 {
