--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_Time.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_Time.cshtml
@@ -1,5 +1,4 @@
-﻿@using FamilyHubs.ServiceDirectory.Admin.Core.Models
-@model TimeViewModel
+﻿@model TimeViewModel
 <div class="govuk-form-group">
     <fieldset class="govuk-fieldset" role="group" aria-describedby="@Model.Component.HintId">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
