--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/times.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/times.cshtml
@@ -8,12 +8,15 @@
         (int)ErrorId.Times__SelectWhenServiceAvailable => "weekdays",
         (int)ErrorId.Times__EnterWeekdaysTimes => "todo: first empty?",
         (int)ErrorId.Times__EnterWeekendsTimes => "todo: first empty?",
-        (int)ErrorId.Times__EnterValidWeekdaysStartTime => Model.WeekdaysStarts.HourElementId,
-        (int)ErrorId.Times__EnterValidWeekdaysFinishTime => Model.WeekdaysFinishes.HourElementId,
-        (int)ErrorId.Times__EnterValidWeekendsStartTime => Model.WeekendsStarts.HourElementId,
-        (int)ErrorId.Times__EnterValidWeekendsFinishTime => Model.WeekendsFinishes.HourElementId,
+            //todo: throw instead?
+        (int)ErrorId.Times__EnterValidWeekdaysStartTime => Model.WeekdaysStarts?.HourElementId ?? "",
+        (int)ErrorId.Times__EnterValidWeekdaysFinishTime => Model.WeekdaysFinishes?.HourElementId ?? "",
+        (int)ErrorId.Times__EnterValidWeekendsStartTime => Model.WeekendsStarts?.HourElementId ?? "",
+        (int)ErrorId.Times__EnterValidWeekendsFinishTime => Model.WeekendsFinishes?.HourElementId ?? "",
         _ => throw new SwitchExpressionException(errorId)
     };
+
+    var selectWhenError = Model.Errors.GetErrorIfTriggered((int)ErrorId.Times__SelectWhenServiceAvailable);
 }
 
 @section Back {
@@ -26,22 +29,24 @@
     <div class="govuk-grid-column-two-thirds">
         
         <form method="post" novalidate>
-            <div class="govuk-form-group">
-                <fieldset class="govuk-fieldset" aria-describedby="select-periods-hint">
+            <div class="govuk-form-group @selectWhenError?.FormGroupClass">
+                <fieldset class="govuk-fieldset" aria-describedby="select-periods-hint selectWhenError?.InputErrorMessageParaId">
                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                         <h1 class="govuk-fieldset__heading">
                             When is the service available?
                         </h1>
                     </legend>
+                    <partial name="_ErrorMessageNext" model="selectWhenError" />
                     <p id="select-periods-hint">Select the periods during which the service is available. You can provide more specific details such as session times on the next page.</p>
 
                     <div class="govuk-checkboxes" data-module="govuk-checkboxes">
 
                         <div class="govuk-checkboxes__item">
+                            @* todo: put times in own class and throw if null at top *@
                             <input type="checkbox" id="weekdays" class="govuk-checkboxes__input"
                                    name="DayType" value="@DayType.Weekdays"
                                    data-aria-controls="conditional-weekdays"
-                                   @(Model.WeekdaysStarts.Time != null && Model.WeekdaysFinishes.Time != null ? "checked" : "")>
+                                   @(Model.WeekdaysStarts?.Time != null && Model.WeekdaysFinishes?.Time != null ? "checked" : "")>
                             <label class="govuk-label govuk-checkboxes__label" for="weekdays">
                                 Weekdays
                             </label>
@@ -60,7 +65,7 @@
                             <input type="checkbox" id="weekends" class="govuk-checkboxes__input"
                                    name="DayType" value="@DayType.Weekends"
                                    data-aria-controls="conditional-weekends"
-                                   @(Model.WeekendsStarts.Time != null && Model.WeekendsFinishes.Time != null ? "checked" : "")>
+                                   @(Model.WeekendsStarts?.Time != null && Model.WeekendsFinishes?.Time != null ? "checked" : "")>
                             <label class="govuk-label govuk-checkboxes__label" for="weekends">
                                 Weekends
                             </label>
